# secwatcher

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: scan-self.yml  scan.yml
config/: .github-scanner.yml  gitleaks.toml
scripts/: pin_actions.py
secwatcher/: __init__.py  __main__.py  auth.py  cli.py  config.py  github_client.py  models.py  orchestrator.py  rate_limiter.py  state.py  suppression.py
secwatcher/delivery/: cli.py  slack.py
secwatcher/scanners/: actions.py  branch_protection.py  deps.py  secrets.py  visibility.py
tests/: test_actions_scanner.py  test_github_client.py  test_models.py  test_orchestrator.py  test_state.py  test_suppression.py
